--- a/index.html
+++ b/index.html
@@ -3,57 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terraria Banner Tracker</title>
+    <title>Terraria Banners</title>
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <h1>Terraria Banner Tracker</h1>
-    <div>
-        <h2>Owned Banners</h2>
-        <ul id="owned-banners"></ul>
-    </div>
-    <div>
-        <h2>Progress</h2>
-        <p id="progress"></p>
-    </div>
-    <div>
-        <h2>Add a Banner</h2>
-        <input type="text" id="banner-id" placeholder="Banner ID" />
-        <button onclick="addBanner()">Add</button>
-    </div>
-
-    <script>
-        async function fetchOwnedBanners() {
-            const response = await fetch('/api/owned_banners');
-            const data = await response.json();
-            document.getElementById('owned-banners').innerHTML = data.owned
-                .map(banner => `<li>${banner}</li>`)
-                .join('');
-        }
-
-        async function fetchProgress() {
-            const response = await fetch('/api/progress');
-            const data = await response.json();
-            document.getElementById('progress').innerText = `${data.owned}/${data.total}`;
-        }
-
-        async function addBanner() {
-            const bannerId = document.getElementById('banner-id').value;
-            const response = await fetch('/api/owned_banners', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ id: bannerId }),
-            });
-            if (response.ok) {
-                alert('Banner added!');
-                fetchOwnedBanners();
-                fetchProgress();
-            } else {
-                alert('Failed to add banner!');
-            }
-        }
-
-        fetchOwnedBanners();
-        fetchProgress();
-    </script>
+    <header>
+        <h1>Terraria Banner Tracker</h1>
+        <p>Track and manage your Terraria banners!</p>
+    </header>
+    <main>
+        <section id="progress">
+            <h2>Progress</h2>
+            <p id="progress-text">Loading...</p>
+        </section>
+        <section id="all-banners">
+            <h2>All Banners</h2>
+            <ul id="banner-list"></ul>
+        </section>
+        <section id="owned-banners">
+            <h2>Owned Banners</h2>
+            <ul id="owned-list"></ul>
+        </section>
+        <section id="add-banner">
+            <h2>Add a Banner</h2>
+            <input type="text" id="banner-id" placeholder="Enter Banner ID or name" />
+            <button id="add-banner-btn">Add Banner</button>
+            <p id="add-status"></p>
+        </section>
+    </main>
+    <script src="/static/script.js"></script>
 </body>
 </html>
