Added backend delete functionality and tweaked descriptions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Terraria Banner Tracker</h1>
-        <p>This tool allows you to track banners you have collected in your Terraria playthrough</p>
+        <p>Track banners you've obtained and check if you have duplicates.</p>
     </header>
     <main>
         <section id="progress">
