Added frontend delete functionality

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
         </section>
         <section id="owned-banners">
             <h2>Owned Banners</h2>
-            <ul id="owned-list"></ul>
+            <ul id="owned-list">
+                <!-- Example -->
+                <!-- The "delete-bin" will only appear on hover -->
+                <li data-id="2928">
+                    Zombie Banner
+                    <span class="delete-bin" title="Delete">🗑️</span>
+                </li>
+            </ul>
         </section>
         <section id="add-banner">
             <h2>Add a Banner</h2>
